# slabfi

./: .env.example  .gitignore  .gitmodules  Anchor.toml  Cargo.toml  DEPLOYMENTS.md  DOCS.md  PRD.md  PRESENTATION.md  README.md  SETUP.md  USER_FLOWS.md  WHITEPAPER.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json  tsconfig.tsbuildinfo
backend/: package.json
contracts/: foundry.toml  remappings.txt
frontend/: .env.example  .prettierignore  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
indexer/: package.json
prisma/: schema.prisma
programs/: README.md
programs/slab_hub/: Cargo.toml
programs/slab_hub/src/: errors.rs  lib.rs  state.rs  util.rs
programs/slab_hub/src/instructions/: health.rs  initialize.rs  lending.rs  liquidation.rs  lz_entry.rs  mod.rs  nft_vault.rs  oracle.rs  pool.rs  registry.rs
scripts/: ccip-manual-execute.ts  cre-simulate-local.sh  deploy-all.sh  diagnose-ccip-message.ts  diagnose-collateral-hub.ts  fetch-card-prices-from-pricecharting.ts  fund-ccip-message-router.ts  hub-backfill-collateral-from-lock-tx.ts  hub-grant-hf-on-liquidation-manager.ts  hub-revoke-router-role.ts  mint-cardfi-collectibles.ts  normalize-card-metadata-json.cjs  oracle-force-liquidate.ts  print-deploy-env.ts  push-oracle-mock-from-catalog.ts  reseed-pending-collateral-oracle.ts  seed-cards-from-stub.ts  seed-indexer-cursors.ts  setup.sh  sync-protocol-from-deployments.ts  sync-testnet-from-deployments.ts  whitelist-evm-collections-solana.ts
shared/: index.ts  (+2 more)
(+283 files in other folders)
