[package]
name = "slab_hub"
version = "0.1.0"
description = "Slab.Finance hub program (oracle, registry, lending, vault, health, liquidation, LZ entry) — Solana mainnet"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "slab_hub"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token", "associated_token"] }
